backup/final_project/final_project.sdk/.metadata/.plugins/org.eclipse.cdt.ui/new_bsp_xllfifo_interrupt_example_1.build.log
23:49:34 **** Auto Build of configuration Debug for project new_bsp_xllfifo_interrupt_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xllfifo_interrupt_example.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xllfifo_interrupt_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../new_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xllfifo_interrupt_example.d" -MT"src/xllfifo_interrupt_example.o" -o "src/xllfifo_interrupt_example.o" "../src/xllfifo_interrupt_example.c"
../src/xllfifo_interrupt_example.c: In function 'XLlFifoInterruptExample':
../src/xllfifo_interrupt_example.c:273:52: error: 'FIFO_INTR_ID' undeclared (first use in this function); did you mean 'FIFO_DEV_ID'?
  Status = SetupInterruptSystem(&Intc, InstancePtr, FIFO_INTR_ID);
                                                    ^~~~~~~~~~~~
                                                    FIFO_DEV_ID
../src/xllfifo_interrupt_example.c:273:52: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:23: src/xllfifo_interrupt_example.o] Error 1

23:49:34 Build Finished (took 284ms)

